# office_detective

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  LICENSE  Makefile  README.md  lint-staged.config.js  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260116_0001_initial_baseline.py  20260116_0002_add_updated_at_columns.py  20260117_0001_add_language_support.py  20260117_0002_add_users_table.py
apps/api/src/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
apps/api/src/api/routes/: __init__.py  auth.py  cases.py  chat.py  documents.py  entities.py  graph.py  health.py  search.py
apps/api/src/db/: __init__.py  neo4j.py  session.py
apps/api/src/models/: __init__.py  base.py  case.py  document.py  player.py  user.py
apps/api/src/schemas/: __init__.py  case.py  chat.py  document.py  entity.py  graph.py  search.py  submission.py  user.py
apps/api/src/scripts/: seed_mallory.py
apps/api/src/services/: __init__.py  agent_service.py  auth_service.py  case_service.py  chunking_service.py  document_service.py  embedding_service.py  entity_service.py  graph_service.py  ingestion_service.py  rate_limiter.py  search_service.py
apps/api/tests/: __init__.py  conftest.py  test_agent_service.py  test_auth.py  test_case_service.py  test_chunking_service.py  test_e2e_case_flow.py  test_embedding_service.py  test_graph_service.py  test_ingestion_service.py  test_models.py  test_search_service.py  test_seed.py
apps/api/tests/agent/: test_graph.py  test_tools.py
apps/api/tests/api/: test_cases.py  test_chat.py  test_documents.py  test_entities.py  test_graph.py  test_health.py  test_search.py  test_submission.py
apps/web/: Dockerfile  eslint.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/__tests__/components/: button.test.tsx  language-switcher.test.tsx  submission-result.test.tsx
apps/web/__tests__/game/: progression.test.ts
apps/web/__tests__/i18n/: config.test.ts
apps/web/__tests__/stores/: game-store.test.ts
apps/web/messages/: en.json  es.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/cases/: page.tsx
apps/web/src/components/auth/: auth-guard.tsx  login-form.tsx  register-form.tsx
apps/web/src/components/board/: board-toolbar.tsx  document-node.tsx  empty-board-state.tsx  entity-node.tsx  evidence-board.tsx  evidence-panel.tsx  evidence-sidebar.tsx  hypothesis-node.tsx  node-details-panel.tsx
apps/web/src/components/cases/: quick-demo-button.tsx
apps/web/src/components/chat/: chat-container.tsx  chat-input.tsx  chat-message.tsx  citation-badge.tsx  hint-button.tsx
apps/web/src/components/documents/: document-card.tsx  document-list.tsx  document-type-badge.tsx  document-viewer.tsx
apps/web/src/components/game/: case-progress-cards.tsx  investigation-hud.tsx  progression.ts  streak-history-panel.tsx
apps/web/src/components/home/: start-button.tsx
apps/web/src/components/layout/: header.tsx  language-switcher.tsx  sidebar.tsx  user-menu.tsx
apps/web/src/components/search/: search-bar.tsx  search-result-item.tsx  search-results.tsx
apps/web/src/components/ui/: badge.tsx  (+8 more)
apps/web/src/hooks/: use-case.ts  use-chat.ts  use-documents.ts  use-entities.ts  use-graph.ts  use-search.ts
apps/web/src/i18n/: config.ts  navigation.ts  request.ts
apps/web/src/lib/: api.ts
apps/web/src/stores/: auth-store.ts  game-store.ts
apps/web/src/types/: index.ts
data/cases/mallory/: case.yaml  entities.yaml
data/cases/mallory/documents/: DOC-001.yaml  DOC-002.yaml  DOC-003.yaml  DOC-004.yaml  DOC-005.yaml  DOC-006.yaml  DOC-007.yaml  DOC-008.yaml  DOC-009.yaml  DOC-010.yaml  DOC-011.yaml  DOC-012.yaml  DOC-013.yaml  DOC-014.yaml  DOC-015.yaml  DOC-016.yaml  DOC-017.yaml  DOC-018.yaml  DOC-019.yaml
docs/: 01_GAME_DESIGN.md  01_GAME_DESIGN_FUTURE.md  02_CASE_GENERATION.md  03_TECHNICAL_ARCHITECTURE.md  04_UI_UX.md  05_BUSINESS.md  06_ROADMAP.md  07_FIRST_CASE.md  CONCEPT_v2.md  README.md
infra/: docker-compose.yml
infra/postgres/: init.sql
(+23 files in other folders)
